namespace Domain.Enums;

public enum FindingStatus { Open, Remediated, Ignored }
