package com.vulnwatch.worker.ai;

import com.vulnwatch.worker.models.AggregatedScanData;
import com.vulnwatch.worker.models.ai.EnrichedScanResult;

public class AiEnricher {
    public EnrichedScanResult enrich(AggregatedScanData aggregated) {
    }
}
