package com.vulnwatch.worker.enums;

public enum TargetType {
    DOMAIN,
    REPOSITORY
}
