package com.vulnwatch.worker.scanners.dns.models;

public enum Severity {
    INFO,
    LOW,
    MEDIUM,
    HIGH,
    CRITICAL
}
